--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -1,3 +1,10 @@
+{% load static %}
+{% load compress %}
+
+{% compress js %}
+    <script src="{% static 'firstwagtailsite.js' %}"></script>
+{% endcompress %}
+
 {% extends "base.html" %}
 
 {% load wagtailcore_tags %}
